@@ -2,6 +2,7 @@ Changelog for Articles.
 
 Articles 1.0.0
 ===============================
+- [#6167] Fix issue where unpublished new articles were not showing in grid
 - Allow search on articles grid to search tags
 - Add content preview for each article to articles grid
 - Add bulk publish/unpublish/delete/undelete to articles grid
